# oxylus-erp

./: .gitignore  README.rst  manage.py  pyproject.toml
assets/: docgen.config.cjs  package.json  pnpm-workspace.yaml  tsconfig.json  typedoc.json
assets/docs/.vitepress/: config.ts  sidebar.json
assets/docs/api/: index.md
assets/docs/guide/: index.md
docs/source/: api.rst  conf.py  guide.rst  index.rst  project.rst  todo.rst
docs/source/api/: core.rst
docs/source/guide/: applications.rst  client.rst  i18n.rst  overview.rst  templates.rst
docs/source/project/: are_we_there.rst  features.csv  roadmap.rst
instance/: settings.py  urls.py
ox_erp/contacts/: admin.py  apps.py  assets  filters.py  models.py  notes.md  panels.py  serializers.py  signals.py  urls.py  utils.py  views.py
ox_erp/contacts/data/: .fixture-0-organisationtype.yaml.kak.HKo6fS  fixture-0-organisationtype.yaml
ox_erp/contacts/migrations/: 0001_initial.py  0002_alter_organisationtype_abbreviation_and_more.py
ox_erp/contacts/models/: __init__.py  contact.py  contact_info.py  contact_list.py
ox_erp/contacts/static/@mdi/font/css/: materialdesignicons.css  materialdesignicons.min.css.map
ox_erp/contacts/static/@mdi/font/scss/: _functions.scss  _icons.scss
ox_erp/contacts/static/@oxylus/contacts/: index.js  index.js.map  vuetify.css  vuetify.js  vuetify.js.map
ox_erp/contacts/static/@oxylus/contacts/.vite/: manifest.json
ox_erp/contacts/static/@oxylus/ox/: OxAutocomplete.js.map  components.js  components.js.map  index.js  index.js.map  index2.js  index2.js.map  style.css  vendor.js  vendor.js.map  vuetify.js  vuetify.js.map
ox_erp/contacts/static/@oxylus/ox/locales/: en.json
ox_erp/contacts/static/axios/browser/: axios.cjs
ox_erp/contacts/static/axios/esm/: axios.js
ox_erp/contacts/static/axios/node/: axios.cjs.map
ox_erp/contacts/static/vue/: vue.runtime.global.js
ox_erp/contacts/static/vuetify/: _component-variables.sass  vuetify-labs.css  vuetify-labs.esm.js  vuetify.cjs.map  vuetify.esm.js  vuetify.esm.js.map  vuetify.js  vuetify.js.map
ox_erp/contacts/static/vuetify/json/: attributes.json  importMap-labs.json  importMap.json  tags.json  web-types.json
ox_erp/contacts/templates/ox/contacts/components/: organisation_actions.html  organisation_panel.html  person_actions.html  person_panel.html
ox_erp/contacts_mails/: admin.py  apps.py  assets  models.py  panels.py  serializers.py  tokens.py  urls.py  views.py
ox_erp/contacts_mails/migrations/: 0001_initial.py
ox_erp/locations/: admin.py  apps.py  assets  filters.py  models.py  panels.py  serializers.py  urls.py  views.py
ox_erp/locations/data/: fixtures-0-currencies.yaml  fixtures-1-countries.yaml
ox_erp/locations/migrations/: 0001_initial.py
ox_erp/locations/static/@mdi/font/: preview.html
ox_erp/locations/static/@mdi/font/css/: materialdesignicons.css.map
ox_erp/locations/static/@mdi/font/scss/: _animated.scss  _extras.scss  _variables.scss  materialdesignicons.scss
ox_erp/locations/static/@oxylus/locations/: index.js  index.js.map  vuetify.css  vuetify.js  vuetify.js.map
ox_erp/locations/static/@oxylus/locations/.vite/: manifest.json
ox_erp/locations/static/@oxylus/ox/: OxAutocomplete.js  OxAutocomplete.js.map  components.js  components.js.map  index.js  index.js.map  index2.js  index2.js.map  style.css  vendor.js.map  vuetify.js.map
ox_erp/locations/static/@oxylus/ox/.vite/: manifest.json
ox_erp/locations/static/axios/: axios.js.map
ox_erp/locations/static/axios/browser/: axios.cjs.map
ox_erp/locations/static/axios/esm/: axios.js.map  axios.min.js.map
ox_erp/locations/static/axios/node/: axios.cjs
ox_erp/locations/static/vue/: vue.cjs.js  vue.global.js  vue.runtime.esm-browser.js
ox_erp/locations/static/vuetify/: _component-variables-labs.sass  vuetify-labs.cjs  vuetify-labs.css  vuetify-labs.esm.js.map  vuetify-labs.min.css  vuetify.cjs  vuetify.css  vuetify.js.map  vuetify.min.css  vuetify.min.js.map
ox_erp/locations/static/vuetify/json/: attributes.json  importMap-labs.json  importMap.json  tags.json  web-types.json
tests/: conftest.py
tests/contacts/: conftest.py  test_serializers.py  test_signals.py  test_utils.py
